<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
   <TableLayout
       android:id="@+id/tableLayout1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <TableRow
           android:id="@+id/tableRow1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
           <Button
               android:id="@+id/button1"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="80dp"
               android:layout_marginTop="20dp"
               android:text="@string/button1" />
       </TableRow>
       <TableRow
           android:id="@+id/tableRow2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
           <Button
               android:id="@+id/button2"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="80dp"
               android:layout_marginTop="20dp"
               android:text="@string/button2" />
       </TableRow>
       <TableRow
           android:id="@+id/tableRow3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
           <Button
               android:id="@+id/button3"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="80dp"
               android:layout_marginTop="20dp"
               android:text="@string/button3" />
       </TableRow>
       <TableRow
           android:id="@+id/tableRow4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
           <Button
               android:id="@+id/button4"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:layout_marginLeft="80dp"
               android:layout_marginTop="20dp"
               android:text="@string/button4" />
       </TableRow>   </TableLayout>
</LinearLayout>